tests/baselines/reference/nodeModulesImportAssertions(module=nodenext).errors.txt
error TS2468: Cannot find global value 'Promise'.
otherc.cts(1,35): error TS2836: Import assertions are not allowed on statements that compile to CommonJS 'require' calls.
otherc.cts(2,15): error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.


!!! error TS2468: Cannot find global value 'Promise'.
==== index.ts (0 errors) ====
    import json from "./package.json" assert { type: "json" };
==== otherc.cts (2 errors) ====
    import json from "./package.json" assert { type: "json" }; // should error, cjs mode imports don't support assertions
                                      ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2836: Import assertions are not allowed on statements that compile to CommonJS 'require' calls.
    const json2 = import("./package.json", { assert: { type: "json" } }); // should be fine
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2712: A dynamic import call in ES5/ES3 requires the 'Promise' constructor.  Make sure you have a declaration for the 'Promise' constructor or include 'ES2015' in your '--lib' option.
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }